# crack-the-quote-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  daily_quote.json  docker-compose.yml  formatDate.go  go.mod  go.sum  main.go  quote.go
.github/workflows/: deploy.yml  rust.yml
models/: quoteDocument.go  quoteEntity.go
service/: quoteService.go
sql/: init.sql
src/: main.rs
src/models/: daily_puzzle.rs  daily_puzzle_response.rs
src/routes/: daily_letter_routes.rs  daily_quote_routes.rs
src/utils/: daily_puzzle_utils.rs  init_quotes_utils.rs  mod.rs  refresh_utils.rs
utils/: formatDate.go
